--- a/webroot/sites/premium.drupal.dk/themes/custom/premium/templates/region/region--burgermenu.html.twig
+++ b/webroot/sites/premium.drupal.dk/themes/custom/premium/templates/region/region--burgermenu.html.twig
@@ -26,10 +26,7 @@
       </div>
       <button id="js-burger-menu__close" class="burger-menu__close"  aria-label="Close navigation menu">
         <div class="burger-menu__close-label">{{ 'Close'|t }}</div>
-        {% include '@reusable-component/svg-icon.twig' with {
-          'attributes': '',
-          'svgIconName': 'close'
-        } %}
+        <div class="burger-menu__close-icon"></div>
       </button>
     </div>
     <div class="container">
