--- a/webroot/sites/premium.drupal.dk/themes/custom/premium/assets/components/css/base/pager.css
+++ b/webroot/sites/premium.drupal.dk/themes/custom/premium/assets/components/css/base/pager.css
@@ -15,20 +15,72 @@
 
   &__item {
     display: inline-block;
+    margin: 2px 0;
     font-size: var(--base-font-size-small);
     text-align: center;
-
-    &:not(:last-child) {
-      margin-right: 10px;
-    }
 
     &.is-active {
       font-weight: bold;
     }
-  }
 
-  a {
-    color: var(--theme-link-color);
-    text-decoration: none;
+    &--first .icon,
+    &--previous .icon {
+      transform: rotate(90deg);
+    }
+
+    &--last .icon,
+    &--next .icon {
+      transform: rotate(-90deg);
+    }
+
+    &--first .icon,
+    &--last .icon {
+      &:first-child {
+        margin-right: -5px;
+      }
+
+      &:last-child {
+        margin-left: -5px;
+      }
+    }
+
+    a {
+      display: block;
+      width: 52px;
+      height: 52px;
+      margin: 0;
+      padding: 0;
+      color: var(--theme-color);
+      font-weight: 500;
+      font-size: 17px;
+      line-height: 49px;
+      text-align: center;
+      text-decoration: none;
+      border: 1px solid var(--theme-color);
+      border-radius: 0;
+      transition: all .3s ease;
+
+      .icon {
+        width: 14px;
+        height: 14px;
+        vertical-align: middle;
+        transition: fill .3s ease;
+        fill: var(--theme-color);
+      }
+
+      &:hover {
+        color: var(--theme-background-color);
+        background-color: var(--theme-color);
+
+        .icon {
+          fill: var(--theme-background-color);
+        }
+      }
+    }
+
+    &.is-active a {
+      color: var(--theme-background-color);
+      background-color: var(--theme-color);
+    }
   }
 }
