--- a/webroot/sites/premium.drupal.dk/themes/custom/premium/assets/components/css/base/pager.css
+++ b/webroot/sites/premium.drupal.dk/themes/custom/premium/assets/components/css/base/pager.css
@@ -50,13 +50,13 @@
       height: 52px;
       margin: 0;
       padding: 0;
-      color: var(--theme-color);
+      color: var(--theme-color) !important; /* stylelint-disable-line */
       font-weight: 500;
       font-size: 17px;
       line-height: 49px;
       text-align: center;
       text-decoration: none;
-      border: 1px solid var(--theme-color);
+      border: 1px solid var(--theme-color) !important; /* stylelint-disable-line */
       border-radius: 0;
       transition: all .3s ease;
 
@@ -69,8 +69,8 @@
       }
 
       &:hover {
-        color: var(--theme-background-color);
-        background-color: var(--theme-color);
+        color: var(--theme-background-color) !important; /* stylelint-disable-line */
+        background-color: var(--theme-color) !important; /* stylelint-disable-line */
 
         .icon {
           fill: var(--theme-background-color);
@@ -79,8 +79,8 @@
     }
 
     &.is-active a {
-      color: var(--theme-background-color);
-      background-color: var(--theme-color);
+      color: var(--theme-background-color) !important; /* stylelint-disable-line */
+      background-color: var(--theme-color) !important; /* stylelint-disable-line */
     }
   }
 }
