--- a/webroot/sites/premium.drupal.dk/themes/custom/premium/templates/content/node--article--teaser.html.twig
+++ b/webroot/sites/premium.drupal.dk/themes/custom/premium/templates/content/node--article--teaser.html.twig
@@ -77,7 +77,7 @@
       <div class="article-teaser__categories">
         {{ content.field_article_categories }}
       </div>
-      <div class="article-teaser__title">{{ label }}</div>
+      <h3 class="article-teaser__title h5">{{ label }}</h3>
     </div>
   </a>
 </article>
