--- a/webroot/sites/premium.drupal.dk/themes/custom/premium/templates/content/node--article--teaser.html.twig
+++ b/webroot/sites/premium.drupal.dk/themes/custom/premium/templates/content/node--article--teaser.html.twig
@@ -63,7 +63,7 @@
 
 {{ attach_library('premium/article-teaser') }}
 
-<article{{ attributes.addClass(['article-teaser', 'col-xs-12', 'col-sm-6', 'col-md-4']) }}>
+<article{{ attributes.addClass('article-teaser') }}>
   {{ title_prefix }}
   {{ title_suffix }}
   <a href="{{ url }}" class="article-teaser__link">
