--- a/webroot/sites/premium.drupal.dk/themes/custom/premium/assets/components/css/components/03-organisms/overview-form.css
+++ b/webroot/sites/premium.drupal.dk/themes/custom/premium/assets/components/css/components/03-organisms/overview-form.css
@@ -1,73 +1,165 @@
-.overview-form-facets {
-  padding-top: var(--half-gutter-width) !important; /* stylelint-disable-line */
-  color: var(--color-black);
+.overview-form {
+  &--with-facets {
+    .section--width-narrow & {
+      .overview-form__header {
+        flex-basis: 100%;
+        max-width: 100%;
+        margin-left: 0;
 
-  .form-item {
-    margin-bottom: var(--half-gutter-width) !important; /* stylelint-disable-line */
+        @media (--viewport-md-min) {
+          flex-basis: calc(100% / 3 * 2);
+          max-width: calc(100% / 3 * 2);
+          margin-left: calc(100% / 3);
+        }
+      }
+
+      .overview-form__sidebar {
+        flex-basis: 100%;
+        max-width: 100%;
+
+        @media (--viewport-md-min) {
+          flex-basis: calc(100% / 3);
+          max-width: calc(100% / 3);
+        }
+      }
+
+      .overview-form__main {
+        flex-basis: 100%;
+        max-width: 100%;
+
+        @media (--viewport-md-min) {
+          flex-basis: calc(100% / 3 * 2);
+          max-width: calc(100% / 3 * 2);
+        }
+      }
+    }
   }
 
-  .input {
-    color: var(--color-black) !important; /* stylelint-disable-line */
-    background-color: var(--color-white) !important; /* stylelint-disable-line */
-    border-color: var(--color-gray) !important; /* stylelint-disable-line */;
-  }
-
-  .checkbox:not(:checked) + label:before {
-    border-color: var(--color-gray) !important; /* stylelint-disable-line */;
-  }
-
-  .checkbox:not(:checked) + label:after {
-    border-right-color: var(--color-black) !important; /* stylelint-disable-line */;
-    border-bottom-color: var(--color-black) !important; /* stylelint-disable-line */;
-  }
-
-  .checkbox:checked + label:before {
-    border-color: var(--color-gray) !important; /* stylelint-disable-line */;
-  }
-
-  .checkbox:checked + label:after {
-    border-right-color: var(--color-primary) !important; /* stylelint-disable-line */;
-    border-bottom-color: var(--color-primary) !important; /* stylelint-disable-line */;
-  }
-
-  &__sorting {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    padding-top: var(--half-gutter-width);
+  &-facets {
+    padding-top: var(--half-gutter-width) !important; /* stylelint-disable-line */
+    color: var(--color-black);
 
     .form-item {
-      margin-bottom: 0 !important; /* stylelint-disable-line */
+      margin-bottom: var(--half-gutter-width) !important; /* stylelint-disable-line */
     }
 
-    select {
+    .input {
+      color: var(--color-black) !important; /* stylelint-disable-line */
+      background-color: var(--color-white) !important; /* stylelint-disable-line */
+      border-color: var(--color-gray) !important; /* stylelint-disable-line */;
+    }
+
+    .checkbox:not(:checked) + label::before {
+      border-color: var(--color-gray) !important; /* stylelint-disable-line */;
+    }
+
+    .checkbox:not(:checked) + label::after {
+      border-right-color: var(--color-black) !important; /* stylelint-disable-line */;
+      border-bottom-color: var(--color-black) !important; /* stylelint-disable-line */;
+    }
+
+    .checkbox:checked + label::before {
+      border-color: var(--color-gray) !important; /* stylelint-disable-line */;
+    }
+
+    .checkbox:checked + label::after {
+      border-right-color: var(--color-primary) !important; /* stylelint-disable-line */;
+      border-bottom-color: var(--color-primary) !important; /* stylelint-disable-line */;
+    }
+
+    &__sorting {
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      padding-top: var(--half-gutter-width);
+
+      .form-item {
+        margin-bottom: 0 !important; /* stylelint-disable-line */
+      }
+
+      & select {
+        padding: 0 15px 0 0;
+        color: var(--theme-color);
+        font-weight: inherit;
+        font-size: 16px;
+        line-height: 22px;
+        background: none;
+        border: none;
+      }
+    }
+
+    .form-item-text {
+      position: relative;
+      display: block;
+      padding: 25px 30px 30px;
+      background-color: var(--color-white);
       border: none;
-      background: none;
-      font-size: 16px;
-      line-height: 22px;
-      font-weight: inherit;
-      color: var(--theme-color);
-      padding: 0 15px 0 0;
+      box-shadow: 0 3px 20px rgba(49 51 53 / 3%);
+
+      .label {
+        margin-bottom: 10px;
+        color: var(--color-black);
+        font-weight: 700;
+        font-size: 19px;
+      }
+    }
+
+    & fieldset:last-child {
+      margin-bottom: 0;
     }
   }
 
-  .form-item-text {
-    position: relative;
-    display: block;
-    padding: 25px 30px 30px;
-    background-color: var(--color-white);
-    border: none;
-    box-shadow: 0 3px 20px rgba(49 51 53 / 3%);
+  &-contents__content {
+    .article-teaser {
+      .overview-form--with-facets & {
+        .section--width-narrow & {
+          flex: 0 0 100%;
 
-    .label {
-      margin-bottom: 10px;
-      color: var(--color-black);
-      font-weight: 700;
-      font-size: 19px;
+          @media (--viewport-ms-min) {
+            flex: 0 0 calc(100% / 2);
+          }
+
+          @media (--viewport-sm-min) {
+            flex: 0 0 calc(100% / 3);
+          }
+
+          @media (--viewport-md-min) {
+            flex: 0 0 calc(100% / 2);
+          }
+        }
+
+        .section--width-normal & {
+          flex: 0 0 100%;
+
+          @media (--viewport-ms-min) {
+            flex: 0 0 calc(100% / 2);
+          }
+
+          @media (--viewport-sm-min) {
+            flex: 0 0 calc(100% / 3);
+          }
+        }
+
+        .section--width-full & {
+          flex: 0 0 100%;
+
+          @media (--viewport-ms-min) {
+            flex: 0 0 calc(100% / 2);
+          }
+
+          @media (--viewport-sm-min) {
+            flex: 0 0 calc(100% / 3);
+          }
+
+          @media (--viewport-xxl-min) {
+            flex: 0 0 calc(100% / 4);
+          }
+
+          @media (--viewport-xxxl-min) {
+            flex: 0 0 calc(100% / 5);
+          }
+        }
+      }
     }
-  }
-
-  fieldset:last-child {
-    margin-bottom: 0;
   }
 }
